sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:4: error: not found: value ecart
  ecart = getNombreValeurs()
  ^AlgCombSort:5: error: not found: value inversion
  inversion = true
  ^AlgCombSort:7: error: not found: value ecart
  while (ecart > 1 && inversion)
         ^AlgCombSort:7: error: not found: value inversion
  while (ecart > 1 && inversion)
                      ^AlgCombSort:9: error: not found: value ecart
    if (ecart > 1)
        ^AlgCombSort:10: error: not found: value ecart
    	ecart = (ecart.toDouble / 1.3).toInt
        ^AlgCombSort:12: error: not found: value i
    i = 0
    ^AlgCombSort:13: error: not found: value inversion
    inversion = false
    ^