sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort()
{
  ecart = getNombreValeurs()
  inversion = true
  
  while (ecart > 1 && inversion)
  {
    if (ecart > 1)
    	ecart = (ecart.toDouble / 1.3).toInt
    
    i = 0
    inversion = false
    
  }
}